# pname

./: .gitignore  .mailmap  CMakeLists.txt  Makefile  README.md  makefile  makefile.win32  pname  uname.c
ios/pname/: AppDelegate.h  AppDelegate.m  PlatformInformation.h  PlatformInformation.m  UIDevice+Backports.h  UIDevice+Backports.m  ViewController.h  ViewController.m  main.m  pname-Info.plist  pname-Prefix.pch
ios/pname.xcodeproj/: project.pbxproj
ios/pname.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/pname.xcodeproj/project.xcworkspace/xcuserdata/jakepetroules.xcuserdatad/: UserInterfaceState.xcuserstate
ios/pname.xcodeproj/xcuserdata/jakepetroules.xcuserdatad/xcschemes/: pname.xcscheme  xcschememanagement.plist
ios/pname/en.lproj/: ViewController_iPad.xib  ViewController_iPhone.xib
